--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,12 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
+    "dev:test": {
+      "cache": false
+    },
+    "e2e:test": {
+        "dependsOn":  ["^build"]
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
