--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
             echo "pnpm-lock.yaml not found, generating it."
             pnpm install --lockfile-only
           fi
-      - run: pnpm install --prefer-offline --frozen-lockfile 
+      - run: pnpm install --prefer-offline
       - run: pnpm playwright install chromium
       - run: pnpm run ci
         env:
