--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,8 @@ jobs:
           node-version: '18'
           cache: 'pnpm'
       - run: pnpm config set registry https://registry.npmjs.org/
-      - run: pnpm store prune          
-      - run: |
-          if [ ! -f pnpm-lock.yaml ]; then
-            echo "pnpm-lock.yaml not found, generating it."
-            pnpm install --lockfile-only
-          fi
+      - run: pnpm store prune
+      - run: echo "strict-peer-dependencies=false" >> .npmrc
       - run: pnpm install
       - run: pnpm playwright install chromium
       - run: pnpm run ci
