--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "playwright": "^1.49.0",
     "prettier": "^3.2.5",
     "turbo": "^2.3.1",
     "typescript": "5.5.4"
